# CSLearning-arch-2020-12-30

./: .gitignore  README.md  mit.pages  passws.docx
Algebra/: Classic algebra by P. M. Cohn (z-lib.org).djvu
Algorithm/: .~lock.Introduction to Algorithms(third edition).pdf#
Algorithm/AlgorithmPractises/: CMakeLists.txt  main.cpp
Algorithm/AlgorithmPractises/binarytree/: BinarySearchTree.cpp  BinarySearchTree.h  BinaryTree.cpp  BinaryTree.h  TreeNode.cpp  TreeNode.h
Algorithm/AlgorithmPractises/dynamic_programming/: LongestIncreasingSubsequence.cpp  dynamic.h  fibonacci.cpp  market.cpp  min_max.cpp  rod.cpp
Algorithm/AlgorithmPractises/sort/: insertion.cpp  merge.cpp  quick.cpp  sort.h
Analysis/functional/: Applied functional analysis main principles and their applications by Eberhard Zeidler (z-lib.org).djvu  suggestions.txt
Database/CMU Intro 2019/: readings.pages
Database/MIT 6.830/: lecture notes.txt
Distributed/6.824/: schedule.docx
Engineer Techs/LearnFrontend/: html_practise.html
Networking/: README.md  TCPFSM.dia
Networking/Stanford CS244a/: 1-2-four_layers1.ppt  1-3-ip_service_model.ppt  2-1-tcp-service-model.ppt  2-11-annotation.txt  2-2-udp-service-model.ppt  2-3-icmp.ppt  3-2_what_is_packet_switching.pptx  3-3_terminology_and_e2e_delay.pptx  3-4_playback_buffers.pptx  3-5_simple_queue_model.pptx
Networking/cisco files/: PT.conf
Numerical/EE364a/: homework.docx
Numerical/cvxmind/: theory-convex-set.xmind
Operating System/: operating-systems-principles-and-practice-2nd-Vol-4.epub
Operating System/MIT 6.828/: .~hedule.docx  (+1 more)
(+187 files in other folders)
